@@ -20,6 +20,7 @@ package org.apache.solr.search;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 
 import org.apache.solr.common.SolrException;
@@ -151,7 +152,7 @@ public class LRUCache<K,V> extends SolrCacheBase implements SolrCache<K,V> {
   @Override
   public void warm(SolrIndexSearcher searcher, SolrCache<K,V> old) {
     if (regenerator==null) return;
-    long warmingStartTime = System.currentTimeMillis();
+    long warmingStartTime = System.nanoTime();
     LRUCache<K,V> other = (LRUCache<K,V>)old;
 
     // warm entries
@@ -194,7 +195,7 @@ public class LRUCache<K,V> extends SolrCacheBase implements SolrCache<K,V> {
       }
     }
 
-    warmupTime = System.currentTimeMillis() - warmingStartTime;
+    warmupTime = TimeUnit.MILLISECONDS.convert(System.nanoTime() - warmingStartTime, TimeUnit.NANOSECONDS);
   }
 
 
